tests/ui/infinite/issue-41731-infinite-macro-print.stderr
error: recursion limit reached while expanding `$crate::format_args!`
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `print!` (#3)
   |
  ::: $DIR/issue-41731-infinite-macro-print.rs:6:5
   |
LL | /     macro_rules! stack {
LL | |         ($overflow:expr) => {
LL | |             print!(stack!($overflow));
   | |             -------------------------
   | |             |      |
   | |             |      in this macro invocation (#2)
   | |             in this macro invocation (#3)
LL | |
LL | |
LL | |         };
LL | |     }
   | |     -
   | |     |
   | |_____in this expansion of `stack!` (#1)
   |       in this expansion of `stack!` (#2)
LL |
LL |       stack!("overflow");
   |       ------------------ in this macro invocation (#1)
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "10"]` attribute to your crate (`issue_41731_infinite_macro_print`)

note: trace_macro
  --> $DIR/issue-41731-infinite-macro-print.rs:14:5
   |
LL |     stack!("overflow");
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: expanding `stack! { "overflow" }`
   = note: to `print! (stack! ("overflow")) ;`
   = note: expanding `print! { stack! ("overflow") }`
   = note: to `{ $crate :: io :: _print($crate :: format_args! (stack! ("overflow"))) ; }`
   = note: expanding `stack! { "overflow" }`
   = note: to `print! (stack! ("overflow")) ;`
   = note: expanding `print! { stack! ("overflow") }`
   = note: to `{ $crate :: io :: _print($crate :: format_args! (stack! ("overflow"))) ; }`

error: format argument must be a string literal
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `print!` (#3)
   |
  ::: $DIR/issue-41731-infinite-macro-print.rs:6:5
   |
LL | /     macro_rules! stack {
LL | |         ($overflow:expr) => {
LL | |             print!(stack!($overflow));
   | |             -------------------------
   | |             |      |
   | |             |      in this macro invocation (#2)
   | |             in this macro invocation (#3)
LL | |
LL | |
LL | |         };
LL | |     }
   | |     -
   | |     |
   | |_____in this expansion of `stack!` (#1)
   |       in this expansion of `stack!` (#2)
LL |
LL |       stack!("overflow");
   |       ------------------ in this macro invocation (#1)
   |
help: you might be missing a string literal to format with
  --> $DIR/issue-41731-infinite-macro-print.rs:8:20
   |
LL |             print!("{}", stack!($overflow));
   |                    +++++

error: aborting due to 2 previous errors

